--- a/Pages.html/contacto.html
+++ b/Pages.html/contacto.html
@@ -10,7 +10,15 @@
     <link rel="stylesheet" href="../Estilos.css/index.css">
     <script src="../js/contacto.js"></script>
 </head>
+
 <body>
+  <header>
+    <nav id="nav"> 
+      <a href="../index.html" class="selected">Inicio</a>
+      <a href="./Categorías.html">Categorías</a>
+      <a href="./contacto.html">Contacto</a>
+    </nav>
+  </header>
   
     <form action="https://formsubmit.co/marianadeoliveira384@gmail.com" method="post">
         <section class="form-register">
