--- a/Pages.html/Categorías.html
+++ b/Pages.html/Categorías.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <header>
-        <nav id="nav">
-            <a href="./index.html" class="selected">Inicio</a>
-            <a href="./Pages.html/contacto.html">Contacto</a>
+      <nav id="nav">
+        <a href="../index.html" class="selected">Inicio</a>
+        <a href="./Categorías.html">Categorías</a>
+        <a href="./contacto.html">Contacto</a>
+      </nav>
     
            
         </nav>
