--- a/Pages.html/contacto.html
+++ b/Pages.html/contacto.html
@@ -15,7 +15,7 @@
   <header>
     <nav id="nav"> 
       <a href="../index.html" class="selected">Inicio</a>
-      <a href="./Categorías.html">Categorías</a>
+      <a href="./Menu.html"><Menu>Menú</Menu></a>
       <a href="./contacto.html">Contacto</a>
     </nav>
   </header>
