--- a/Pages.html/Menu.html
+++ b/Pages.html/Menu.html
@@ -12,9 +12,8 @@
 
 <header>
     <nav id="nav">
-        <a href="./index.html" class="selected">Inicio</a>
-        <a href="./Pages.html/Categorías.html">Categorías</a>
-        <a href="./Pages.html/contacto.html">Contacto</a>
+        <a href="../index.html" class="selected">Inicio</a>
+        <a href="./contacto.html">Contacto</a>
         <a href="./Menu.html">Menu</a>
       </nav>
 </header>
