--- a/Pages.html/contacto.html
+++ b/Pages.html/contacto.html
@@ -14,10 +14,11 @@
 <body>
   <header>
     <nav id="nav"> 
-      <a href="../index.html" class="selected">Inicio</a>
-      <a href="./Menu.html"><Menu>Menú</Menu></a>
-      <a href="./contacto.html">Contacto</a>
-    </nav>
+      <nav id="nav">
+        <a href="../index.html" class="selected">Inicio</a>
+        <a href="./Menu.html"><Menu>Menú</Menu></a>
+        <a href="./contacto.html">Contacto</a>
+      </nav>
   </header>
   
     <form action="https://formsubmit.co/marianadeoliveira384@gmail.com" method="post">
