--- a/Pages.html/Menu.html
+++ b/Pages.html/Menu.html
@@ -140,7 +140,7 @@
       <div class="centrar">
 
         precio total = $<span class="numeroCarrito"></span>
-        <button class="finalizar">finalizar compra</button>
+        <a class="finalizar" href="./contacto.html"> finalizar compra</a>
       </div>
     </div>
 
