--- a/Pages.html/contacto.html
+++ b/Pages.html/contacto.html
@@ -25,13 +25,23 @@
         <section class="form-register">
           
           <h5 class="fu">
-            Formulario de contacto
+            Información de contacto
           </h5>
           <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre" required>
           <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Ingrese su Apellido" required>
           <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su Correo" required>
-          <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Dejanos tu comentario" required>
+          <h5 class="fu">
+            Detalle del pedido
+          </h5>
+          <input class="controls" type="text" name="articulo" id="articulo" placeholder="Artículo seleccionado" required>
+          <input class="controls" type="number" name="cantidad" id="cantidad" placeholder="cantidad" required>
+          <textarea class="controls" id="comentario" placeholder="Comentario"></textarea>
 
+          <h5 class="fu">
+            Lugar de entrega
+          </h5>
+          <input class="controls" type="text" name="domicilio" id="domicilio" placeholder="Domicilio" required>
+          <input class="controls" type="tel" name="telefono" id="telefono" placeholder="Teléfono: 11-" required>
           <input class="botons" type="submit" value="Enviar">
         </section>
       </form>
